other changes in html and css file

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
   </div>
-
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="simonGame.js"></script>
 </body>
 
 </html>
